[240905] CSS: 일기 목록 - 일기 정렬 방식을 그리드 형태로 수정

--- a/01-diary/index.html
+++ b/01-diary/index.html
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="contents_right_item">
+                <!-- <div class="contents_right_item">
                         <div class="write_title">📍 일기 쓰기</div>
                         <div class="write_diary">
                             <div class="write_mood_select">
@@ -142,7 +142,7 @@
                             </div>
                             </div>
                                 <button class="diary_write_button" id="writeButton" disabled onclick="writeButtonPressed()">등록하기</button>
-                    </div>
+                    </div> -->
             </div> 
                 <button class="top_scroll_floating_button" id="top_scroll_button" onclick="topScrollFloatingButtonTapped()"><img src="./assets/top_scroll.png"></button>
             
