feat: 등록화면 모달에서 여백 클릭시 모달 종료 기능 구현

--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -48,7 +48,7 @@
           </div>
           <div class="main">
             <div class="article" id="article"></div>
-            <div id="aside_layout">
+            <div id="aside_layout" class="aside_layout">
               <div class="aside">
                 <div class="diary_entry_title">📍 일기 쓰기</div>
                 <div class="diary_entry_form">
