[240905] assignment complete before resposive design

--- a/daily.html
+++ b/daily.html
@@ -218,7 +218,7 @@
                 <div class="footer-3">Copyright © 2024. {name} Co., Ltd.</div>
             </div>
         </footer>
-        <div id="modal" class="modal">
+        <div id="modal" class="modal" onclick="onClickModalBlank(event)">
             <div class="modal_container">
                 <div class="daily-header">읽기 쓰기</div>
                 <div class="daily-checkcontainer">
@@ -362,4 +362,5 @@
     <script src="./utils/onClickContinueWriting.js"></script>
     <script src="./utils/onClickCancelRegister.js"></script>
     <script src="./utils/onClickModalBlank.js"></script>
+    <script src="./utils/onKeydownEsc.js"></script>
 </html>
