💄 style: 필터, 일기 등록 버튼 정렬을 위한 클래스 추가

--- a/section05/index.html
+++ b/section05/index.html
@@ -32,7 +32,7 @@
           </nav>
           <main class="main">
             <div class="flexbox main-content">
-              <div class="flexbox">
+              <div class="flexbox justify-between align-center">
                 <div class="filter">
                   <select class="filter-emotion" onchange="filterEmotion(event)">
                     <option selected disabled>전체</option>
