🚧 cont: 모달 작업중

--- a/section05/index.html
+++ b/section05/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/modal.css" />
     <script src="./javascript/common.js"></script>
     <script src="./javascript/index.js"></script>
     <title>일기보관함</title>
   </head>
   <body>
     <div class="app">
+      <div class="app-modal">
+        <div class="modal-floor"></div>
+        <div class="modal-add-item"></div>
+      </div>
       <header class="header">
         <h1 class="header-title">
           <a href="./index.html">다인의 다이어리</a>
