--- a/다이어리/diary-detail.html
+++ b/다이어리/diary-detail.html
@@ -34,6 +34,16 @@
         </div>
       </div>
     </div>
+    <div class="confirm_delete_diary_modal_layout" id="confirm_delete_diary_modal">
+      <div class="confirm_delete_diary_modal">
+        <div class="delete_diary_modal_title">일기 삭제</div>
+        <div class="delete_diary_modal_content">일기를 삭제 하시겠어요?</div>
+        <div class="delete_diary_modal_button_group">
+          <button class="delete_diary_cancel_btn" onclick="closeSingleModal('confirm_delete_diary_modal')">취소</button>
+          <button class="delete_diary_btn" onclick="deleteDiary()">삭제</button>
+        </div>
+      </div>
+    </div>
   </body>
   <script src="./diary-detail.js"></script>
 </html>
