다이어리 삭제 함수명 수정에 따른 수정

--- a/detail.html
+++ b/detail.html
@@ -41,7 +41,10 @@
       <div class="buttonWrap">
         <!-- <button class="whiteBtn">목록</button> -->
         <button class="whiteBtn editBtn" onclick="editBtn()">수정</button>
-        <button class="whiteBtn" onclick="deleteBtn(event,queryStringGet())">
+        <button
+          class="whiteBtn"
+          onclick="diaryDeletePop(event,queryStringGet())"
+        >
           삭제
         </button>
       </div>
