[0905] 윤준수 section05 과제 1차 정리

--- a/diaryDetail.html
+++ b/diaryDetail.html
@@ -27,6 +27,8 @@
             <p id="contentText"></p>
           </div>
           <div class="buttons_container">
+            <button id="detailClipboad">내용 복사</button>
+
             <button id="detailEdit">수정</button>
             <button id="detailDelete">삭제</button>
           </div>
@@ -105,5 +107,6 @@
     <button id="upFloatingButton" class="">
       <img src="./public/icons/up_outline_light_xl.svg" alt="" />
     </button>
+    <div class="copy_text">복사되었습니다.</div>
   </body>
 </html>
