fix: 다이어리 등록 모달에서 내용 미입력 시 경고창이 제대로 표시되지 않는 에러 해결

--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -133,7 +133,7 @@
                   </button>
                   <button
                     class="register_button"
-                    onclick="triggerModal('diary_registration_modal')"
+                    onclick="registerDiary()"
                   >
                     등록하기
                   </button>
